# irsanai-nexus

./: .gitignore  README.de.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
backend/: config.py  main.py
backend/analyzer/: cloner.py  repo_intelligence.py  report_store.py  unified_analyzer.py
backend/api/: routes_analyze.py  routes_reports.py
backend/llm_relay/: model_adapters.py  payload_builder.py
cli/: main.py
docker/: Dockerfile.backend  docker-compose.yml
docs/: index.html
scripts/: integration_audit.py  preflight_inventory.py  setup.ps1
tests/: test_cloner_workdir_fallback.py  test_llm_payload_builder.py  test_report_compare.py  test_report_graph.py  test_unified_analyzer_top_files.py
