[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irsanai-nexus-repo"
version = "0.1.0"
description = "IRSAN AI - Repository Intelligence Engine"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "irsanai", email = "no-reply@irsanai.example" }
]

[project.scripts]
repo-intel = "cli.main:cli"
